DOH take out Java 11 features